All Basic of Thermodynamics Formulas

--- a/Formulas/Basics_of_Thermodynamics/Formula.ipynb
+++ b/Formulas/Basics_of_Thermodynamics/Formula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBaNvwLPpv+oy2e21PY5s9",
+      "authorship_tag": "ABX9TyNZX9NRc8AuAPc/OLhAPTEP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
+        "**bold text**\n",
         "# **Formulas of the Basics of Thermodynamics**\n",
         "\n",
         "---\n",
@@ -109,15 +109,15 @@
       "source": [
         "### Relationship between properties in different Processes\n",
         "\n",
-        "**Constant Volume Process**\n",
+        "**Constant Volume Process (Gay-Lussac's Law)**\n",
         "\n",
         "$$\\frac{P_{2}}{P_{1}} = \\frac{T_{2}}{T_{1}}$$\n",
         "\n",
-        "**Constant Pressure Process**\n",
+        "**Constant Pressure Process (Charles's Law)**\n",
         "\n",
         "$$\\frac{V_{2}}{V_{1}} = \\frac{T_{2}}{T_{1}}$$\n",
         "\n",
-        "**Constant Temperature Process**\n",
+        "**Constant Temperature Process (Boyle's Law)**\n",
         "\n",
         "$$ P_{1}.V{1} = P_{2}.V{2} $$"
       ],
@@ -146,9 +146,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Work Done\n",
         "\n",
-        "###Displacement work\n",
+        "##Displacement work done\n",
         "\n",
         "$$ W = ∫P.dv $$\n",
         "\n",
@@ -238,9 +237,9 @@
           "height": 564
         },
         "id": "2dVc0kjqUASt",
-        "outputId": "14325e34-f272-4f4d-c1f5-d9369ac03258"
+        "outputId": "14b2e5ce-9faf-44dc-be87-a5a6ecb11d62"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -256,10 +255,202 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##Slope of polytropic equation\n",
+        "\n",
+        "$$ \\frac{dP}{dv} = \\frac{-np}{V} $$\n",
+        "\n",
+        "- n - Polytropic index"
+      ],
+      "metadata": {
+        "id": "3Jfgb0G47EJJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Specific heat of gas\n",
+        "\n",
+        "- At constant volume $(C_v)$\n",
+        "\n",
+        "  $$ dU = C_v.dT $$\n",
+        "\n",
+        "- At constant Pressure $(C_p)$\n",
+        "  $$ dh = C_p.dT $$\n"
+      ],
+      "metadata": {
+        "id": "V7F33rc49h6V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Adiabatic index $(γ)$\n",
+        "\n",
+        "$$ γ = \\frac{C_p}{C_v} $$\n",
+        "\n",
+        "- for gases $γ > 1$\n",
+        "\n",
+        "- range of $γ$ is $ 1 \\leq γ \\leq 1.67 $\n",
+        "\n",
+        "\n",
+        "### γ for gases\n",
+        "\n",
+        "- for Monoatomic gases $(He)$ ---------------  $ γ = 1.67 $\n",
+        "- for Diatomic gases $(O_2,N_2,Air)$ -------  $ γ = 1.4  $\n",
+        "- for Triatomic gases $ (CO_2) $ -------------------  $ γ = 1.28 $\n",
+        "\n",
+        "<br>\n",
+        "$$ Molecular-Mass (⇑) ------  γ (↓)$$"
+      ],
+      "metadata": {
+        "id": "MxwsLZ_y-Swu"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jX2B87eUbHFB"
+        "id": "GF86E7rw-Qy2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Relationship between $C_p, C_v, R, γ$\n",
+        "\n",
+        "$$ C_p - C_v = R $$\n",
+        "\n",
+        "$$ C_P = \\frac{γ.R}{γ-1} $$\n",
+        "\n",
+        "$$ C_v = \\frac{R}{γ-1} $$\n",
+        "\n",
+        "- For Air\n",
+        "  * $C_p = 1005 \\frac{Joule}{Kg - K}$\n",
+        "  * $ C_v = 717 \\frac{Joule}{Kg -K}$"
+      ],
+      "metadata": {
+        "id": "cyV-PYadByFj"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Flow Work (Steady Flow Energy Equation)\n",
+        "$$ h_1 + \\frac{{V_1}^2}{2} + g.Z_1 + q =  h_2 + \\frac{{V_2}^2}{2} + g.Z_2 + W_s$$\n",
+        "\n",
+        "\n",
+        "### Applicaitons\n",
+        "\n",
+        "- Duct (Nozzzle/ Diffuser)\n",
+        "\n",
+        "  $$ h_1 + \\frac{{V_1}^2}{2} =  h_2 + \\frac{{V_2}^2}{2} $$\n",
+        "  $$ C_p.T_1 + \\frac{{V_1}^2}{2} =  C_p.T_2 + \\frac{{V_2}^2}{2} \\ \\ Here, V(⇑) T(⇓) $$\n",
+        "- Turbine / Compressor\n",
+        "  $$ W_s = C_p.(T_1 - T_2) $$"
+      ],
+      "metadata": {
+        "id": "SfT9JCN7C1Gz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Entropy $(S)$\n",
+        "\n",
+        "Randomness increases upon heat added\n",
+        "\n",
+        "$$ dS = \\frac{dq}{T} $$\n",
+        "\n",
+        "Units = $ (\\frac{Joule}{Kg - K})$"
+      ],
+      "metadata": {
+        "id": "kffrbjPYDrlg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## $T.dS$ Equations\n",
+        "\n",
+        "from first law\n",
+        "  $$ T.dS = dU + P.dv $$\n",
+        "\n",
+        "from enthaply relation\n",
+        "  $$ dh = T.dS + v.dP $$"
+      ],
+      "metadata": {
+        "id": "rgkGjh6fFugY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Change in Entropy $(ΔS)$\n",
+        "\n",
+        "$$ ΔS = C_p.\\ln(\\frac{T_2}{T_1})- R.\\ln(\\frac{P_2}{P_1}) $$\n",
+        "\n",
+        "$$ ΔS = C_v .\\ln(\\frac{T_2}{T_1} + R.\\ln(\\frac{V_2}{V_1})) $$\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VzoFE1UBGNLw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Plot of $T-dS$ Plane\n",
+        "\n",
+        "- Constant Temperature $ ( ΔT = 0) $\n",
+        "  $$ \\frac{dT}{dS} = 0 $$\n",
+        "\n",
+        "- Constant Pressure process $( ΔP=0)$\n",
+        "  $$ \\frac{dT}{dS} = \\frac{T}{C_p} $$\n",
+        "\n",
+        "- Constant Volume process $( ΔS = 0 )$\n",
+        "   $$ \\frac{dT}{dS} = \\frac{T}{C_v} $$\n",
+        "  \n",
+        "- Isentropic process $( ΔV = 0 )$\n",
+        "   $$ \\frac{dT}{dS} = ∞$$\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KI1uh-x8Ln6z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Isentropic Equaiton\n",
+        "\n",
+        "$$ P.v^γ = Constant $$\n",
+        "\n",
+        "Relationships between $P,V,T,ρ$\n",
+        "\n",
+        "- $$ \\frac{P_2}{P_1} = \\left(\\frac{ρ_2}{ρ_1} \\right)^γ$$\n",
+        "\n",
+        "- $$ \\frac{P_2}{P_1} = \\left( \\frac{T_2}{T_1} \\right)^{\\frac{\\gamma}{\\gamma-1}} $$\n",
+        "\n",
+        "- $$ \\frac{ρ_2}{ρ_1} = \\left( \\frac{T_2}{T_1} \\right)^{\\frac{1}{\\gamma-1}} $$\n"
+      ],
+      "metadata": {
+        "id": "J42Pb_zLNDwT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Q_dVvwSmO8X6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
