--- a/Formulas/ALL_Formula.ipynb
+++ b/Formulas/ALL_Formula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNZX9NRc8AuAPc/OLhAPTEP",
+      "authorship_tag": "ABX9TyNe7nyJ8LLRbMEr3kktINAX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "# **Formulas of the Basics of Thermodynamics**\n",
         "\n",
         "---\n",
@@ -443,10 +444,260 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Gas Dynamics\n",
+        "\n",
+        "---\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "NtsR2SQvtUps"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Compressibilty $ (τ) $\n",
+        "\n",
+        "$$ τ =  - \\left (\\frac{1}{V} \\right ) \\left(\\frac{dV}{dP} \\right) = \\left (\\frac{1}{ρ} \\right ) \\left(\\frac{dρ}{dP} \\right)$$\n",
+        "\n",
+        "  - Constant Temperature $(T=C)$\n",
+        "  $$ \\left (τ\\right)_{Isothermal} = \\frac{1}{P} $$\n",
+        "\n",
+        "  - Isentropic process $( Δ S = 0)$\n",
+        "  $$ \\left (τ\\right)_{Isothermal} = \\frac{1}{\\gamma P} $$"
+      ],
+      "metadata": {
+        "id": "sSqnCezQwILc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Euler's energy equation\n",
+        "\n",
+        "$$ \\frac{dP}{\\rho} + V.dV = 0$$"
+      ],
+      "metadata": {
+        "id": "uwPon5nhy5Mh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Bernoulli's Equaiton\n",
+        "\n",
+        "- For incompressible flow\n",
+        "  $$ P + \\left (\\frac{1}{2} \\right) \\rho V^2 = C$$\n",
+        "\n",
+        "  $$ P_1 + \\left (\\frac{1}{2} \\right) \\rho_1 {V_{1}}^2 = P_2 + \\left (\\frac{1}{2} \\right) \\rho_2 {V_{2}}^2$$\n",
+        "\n",
+        "- For compressible flow\n",
+        "\n",
+        "  $$ \\frac{\\gamma P}{ρ(γ-1)} + \\left (\\frac{1}{2} \\right)V^2 = C $$\n",
+        "  $$ \\frac{\\gamma P_1}{ρ_1(γ-1)} + \\left (\\frac{1}{2} \\right){V_{1}}^2 = \\frac{\\gamma P_2}{ρ_2(γ-1)} + \\left (\\frac{1}{2} \\right){V_{2}}^2  $$"
+      ],
+      "metadata": {
+        "id": "1wA0mq0Xzavv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mass Flow rate $(\\dot{m})$\n",
+        "\n",
+        "  $$ \\dot{m} = ρ.A.V = Constant $$\n",
+        "\n",
+        "  - ρ - Density\n",
+        "  - A - Area\n",
+        "  - V - Velocity of the flow\n",
+        "\n",
+        "  $$ ρ_1 A_1 V_1 = ρ_2 A_2 V_2 $$\n",
+        "\n",
+        "    * For incompressible flow $(ρ=Constant)$\n",
+        "\n",
+        "   $$ A_1 V_1 = A_2 V_2$$\n",
+        "\n",
+        "    Volumetric flow $(Q)$ = $ AV (\\frac{m^3}{s}) $"
+      ],
+      "metadata": {
+        "id": "y2Bi2r-KtmM5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Speed of sound $(a)$\n",
+        "\n",
+        "$$ a = \\sqrt{\\frac{dP}{d\\rho}} $$\n",
+        "\n",
+        "- For Isentropic flow\n",
+        "  $$ a = \\sqrt{\\frac{γP}{ρ}} = \\sqrt{γRT} $$"
+      ],
+      "metadata": {
+        "id": "cj0gYkQ44FQd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mach Number $(M)$\n",
+        "\n",
+        "$$ M = \\frac{Speed of Object}{Local speed of the sound} = \\frac{V}{a} $$\n",
+        "\n",
+        "- Mach flows\n",
+        "  - $M < 0.3$  -  Incompressible flow\n",
+        "  - $0.3 \\leq M \\leq 0.8$  - Transonic flow\n",
+        "  - $ M < 1$ - Subsonic flow\n",
+        "  - $ M = 1$ - Sonic flow\n",
+        "  - $ M > 1$ - Supersonic flow\n",
+        "  - $ M > 5$ - Hypersonic flow"
+      ],
+      "metadata": {
+        "id": "AJvpVoc151J3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "t8Tb1VKf7ZIs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Concept of Stagnation and Static Properties\n",
+        "\n",
+        "Stagnation properties are represented as $P_o, T_o, h_o, \\rho_o \\ at \\ Velcity =0$\n",
+        "$$ h_o = h + \\frac{V^2}{2} $$\n",
+        "\n",
+        "$$ T_o = T + \\frac{V^2}{2C_P} $$\n",
+        "\n",
+        "$$ \\frac{T_0}{T} = 1 + (\\frac{γ-1}{2})M^2 $$\n",
+        "\n",
+        "$$ \\frac{P_o}{P} = \\left (\\frac{T_o}{T} \\right)^{\\frac{γ}{γ-1}} = \\left (1 + (\\frac{γ-1}{2})M^2 \\right)^{{\\frac{γ}{γ-1}}}$$\n",
+        "\n",
+        "$$ \\frac{\\rho_o}{ρ} = \\left (\\frac{T_o}{T} \\right)^{\\frac{1}{γ-1}} = \\left (1 + (\\frac{γ-1}{2})M^2 \\right)^{{\\frac{1}{γ-1}}}$$"
+      ],
+      "metadata": {
+        "id": "EKCucNMe7ZKw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Variation in velocity with respect area Change\n",
+        "\n",
+        "  $$ \\frac{dA}{A} = \\frac{dV}{V}(M^2 - 1) $$\n",
+        "\n",
+        "  - $ V (⇑) M(⇑)$ then $ P(↓), T(↓), ρ (↓)$\n",
+        "\n",
+        "  - $ V (↓) M(↓)$ then $ P(⇑), T(⇑), ρ (⇑)$\n",
+        "\n",
+        "1.   List item\n",
+        "2.   List item\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UASWUXtNEbcl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mach Wave"
+      ],
+      "metadata": {
+        "id": "SQcvjl-oFxuE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Critical properties\n",
+        "\n",
+        "the properties  of gas when Speed of the flow or object is exactly equal to local speed of sound\n",
+        "<br>\n",
+        "\n",
+        "they are $ P^* , T^* , \\rho^* , a^* \\ at \\ M = 1$\n",
+        "\n",
+        "$$ \\frac{T_0}{T} = 1 + (\\frac{γ-1}{2})M^2 = 1 + (\\frac{γ-1}{2})(1)^2  = \\frac{γ+1}{2}$$\n",
+        "\n",
+        "$$ \\frac{T_0}{T} = \\frac{γ+1}{2}$$\n",
+        "\n",
+        "$$ \\frac{P_o}{P} = \\left (\\frac{γ+1}{2} \\right)^{\\frac{γ}{γ-1}} $$\n",
+        "\n",
+        "$$ \\frac{\\rho_o}{ρ} = \\left (\\frac{γ+1}{2} \\right)^{\\frac{1}{γ-1}} $$\n",
+        "\n",
+        "  -For Air\n",
+        "\n",
+        "  \\ $\\frac{T_0}{T} = 1.2$\n",
+        "\n",
+        "  $ \\frac{P_o}{P} = 1.89$\n",
+        "  \n",
+        "  $ \\frac{\\rho_o}{ρ} = 1.57 $\n"
+      ],
+      "metadata": {
+        "id": "ftlNGQNLGOWZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Characterstic Mach Number $(M^*)$\n",
+        "\n",
+        "$$ M^* = \\frac{Speed \\ of \\ the \\ object}{Critical \\ speed \\ of \\ sound} = \\frac{V}{a^*} $$"
+      ],
+      "metadata": {
+        "id": "NfhLfSoUnqxF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Energy equation in terms of speed of sound\n",
+        "\n",
+        "  $$ h_1 + \\frac{{V_1}^2}{2} =  h_2 + \\frac{{V_2}^2}{2} $$\n",
+        "  $$ \\frac{{a_1}^2}{γ-1} + \\frac{{V_1}^2}{2} = \\frac{{a_2}^2}{γ-1} + \\frac{{V_2}^2}{2} $$\n",
+        "\n",
+        "  ---\n",
+        "\n",
+        "### For stagnation speed of sound\n",
+        " $$ \\frac{{a_0}^2}{γ-1} = \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} $$\n",
+        "\n",
+        "### For $M = 1$ then $V=a^*$\n",
+        "  $$ \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} = \\frac{{a^*}^2}{γ-1} + \\frac{{a^*}^2}{2}$$\n",
+        "\n",
+        "  $$ \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} = \\frac{({γ+1}){a^*}^2}{2(γ-1)} $$\n",
+        "  \n",
+        "  "
+      ],
+      "metadata": {
+        "id": "b297nGgnoR0G"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Relation between $M$ and $M^*$\n",
+        "\n",
+        "$$ {M^*}^2 = \\frac{(γ+1)M^2}{2+(γ-1)M^2} $$\n",
+        "\n",
+        "if $M → ∞$ then $ M^* = \\sqrt{\\frac{γ+1}{γ-1}} $\n",
+        "\n",
+        "for air if $M → ∞$ then $ M^* = \\sqrt{6} = 2.45 $"
+      ],
+      "metadata": {
+        "id": "NIknL7bXtpBS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Q_dVvwSmO8X6"
+        "id": "4gmz88Hg4ADK"
       },
       "execution_count": null,
       "outputs": []
