--- a/Formulas/ALL_Formula.ipynb
+++ b/Formulas/ALL_Formula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNe7nyJ8LLRbMEr3kktINAX",
+      "authorship_tag": "ABX9TyNOfX3kmk7g81oYPsGCJDY9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -458,6 +458,22 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Volumetric Strain $(\\frac{dV}{V})$\n",
+        "\n",
+        "$$ \\frac{dV}{V} = \\frac{1}{V} \\left (\\left (\\frac{δV}{δT} \\right)dT \\right) +\n",
+        " \\frac{1}{V}\\left (\\left (\\frac{δV}{δP} \\right)dP \\right) $$\n",
+        "\n",
+        "-  $\\frac{1}{V}\\left (\\left (\\frac{δV}{δP} \\right)dP \\right)$ is compression\n",
+        "- $ \\frac{1}{V} \\left (\\left (\\frac{δV}{δT} \\right)dT \\right) $ is expansion\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vn81u26l9Pe8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Compressibilty $ (τ) $\n",
         "\n",
         "$$ τ =  - \\left (\\frac{1}{V} \\right ) \\left(\\frac{dV}{dP} \\right) = \\left (\\frac{1}{ρ} \\right ) \\left(\\frac{dρ}{dP} \\right)$$\n",
@@ -475,7 +491,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Euler's energy equation\n",
+        "## Euler's differerantial equation of motion\n",
         "\n",
         "$$ \\frac{dP}{\\rho} + V.dV = 0$$"
       ],
@@ -493,7 +509,7 @@
         "\n",
         "  $$ P_1 + \\left (\\frac{1}{2} \\right) \\rho_1 {V_{1}}^2 = P_2 + \\left (\\frac{1}{2} \\right) \\rho_2 {V_{2}}^2$$\n",
         "\n",
-        "- For compressible flow\n",
+        "- For compressible flow (isentropic flow)\n",
         "\n",
         "  $$ \\frac{\\gamma P}{ρ(γ-1)} + \\left (\\frac{1}{2} \\right)V^2 = C $$\n",
         "  $$ \\frac{\\gamma P_1}{ρ_1(γ-1)} + \\left (\\frac{1}{2} \\right){V_{1}}^2 = \\frac{\\gamma P_2}{ρ_2(γ-1)} + \\left (\\frac{1}{2} \\right){V_{2}}^2  $$"
@@ -667,7 +683,7 @@
         "### For stagnation speed of sound\n",
         " $$ \\frac{{a_0}^2}{γ-1} = \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} $$\n",
         "\n",
-        "### For $M = 1$ then $V=a^*$\n",
+        "### For $M = 1$ then $V=a^*$ { relation with Critical properties }\n",
         "  $$ \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} = \\frac{{a^*}^2}{γ-1} + \\frac{{a^*}^2}{2}$$\n",
         "\n",
         "  $$ \\frac{{a}^2}{γ-1} + \\frac{{V}^2}{2} = \\frac{({γ+1}){a^*}^2}{2(γ-1)} $$\n",
