--- a/Formulas/ALL_Formula.ipynb
+++ b/Formulas/ALL_Formula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhETFahH4pOg8BI26+v1Yt",
+      "authorship_tag": "ABX9TyP12LM4Ts8LTKo1FlvBWsIe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -633,7 +633,7 @@
         "\n",
         "  -For Air\n",
         "\n",
-        "  \\ $\\frac{T_0}{T} = 1.2$\n",
+        "  $\\frac{T_0}{T} = 1.2$\n",
         "\n",
         "  $ \\frac{P_o}{P} = 1.89$\n",
         "  \n",
