Till Gas Dynamics with out C-D nozzle working

--- a/Formulas/ALL_Formula.ipynb
+++ b/Formulas/ALL_Formula.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf/z8wDw7UqPh1m4dBt2Az",
+      "authorship_tag": "ABX9TyOu7a5O1F+2dwrhbhIe0s4P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,7 +119,7 @@
         "\n",
         "**Constant Temperature Process (Boyle's Law)**\n",
         "\n",
-        "$$ P_{1}.V{1} = P_{2}.V{2} $$"
+        "$$ P_{1}.V_{1} = P_{2}.V_{2} $$"
       ],
       "metadata": {
         "id": "8ZuTfQjzSXic"
@@ -605,7 +605,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Mach Wave"
+        "## Mach Angle\n",
+        "\n",
+        "$$ μ = \\sin^{-1}(\\frac{1}{M}) $$\n",
+        "\n"
       ],
       "metadata": {
         "id": "SQcvjl-oFxuE"
@@ -692,10 +695,305 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Fundamental Equations\n",
+        "\n",
+        "\n",
+        "> ### Continuty Equation\n",
+        "  Integral form of continuty equation\n",
+        "  $$  \\frac{\\partial }{∂t}\\iiint ρ.∂v  + \\iint ρ V.∂s =0 $$\n",
+        "  for Steady Flow\n",
+        "  $$ \\iint ρ V.∂s =0 $$\n",
+        "  Derived form\n",
+        "  $$ ρ_1 A_1 V_1 = ρ_2 A_2 V_2 $$\n",
+        "  if $A_1 = A_2$\n",
+        "  $$ ρ_1  V_1 = ρ_2 V_2 $$\n",
+        "  if $\\rho = constant$\n",
+        "  $$ A_1 V_1 = A_2 V_2 $$\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "\n",
+        "> ### Momentum Equation\n",
+        "  Integral form of momentum equation\n",
+        "  $$  \\frac{\\partial }{∂t}\\iiint (ρ.∂v)V  + \\iint (ρ V.∂s)V = \\iiint \\rho \\ f \\  \\partial v  - \\iint P.∂s + F_{v}$$\n",
+        "  $f$ = body force,\n",
+        "  $F_{v}$ = Viscous force\n",
+        "  \\\\\n",
+        "  if Flow is steady, No body force and invisid\n",
+        "  $$ \\iint (ρ V.∂s)V = \\iiint \\rho \\ f \\  \\partial v  $$\n",
+        "  $$ P_1 + ρ_1 {V_1}^2 = P_2 + ρ_2 {V_2}^2 $$\n",
+        "\n",
+        "> ### Energy Equation\n",
+        "  $$ C_p . T_1 + \\frac{{V_1}^2}{2} = C_p . T_2 + \\frac{{V_2}^2}{2} $$"
+      ],
+      "metadata": {
+        "id": "Xwg7w9mv8fKc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Normal Shock\n",
+        "\n",
+        "$$ {M_2}^*  = \\frac{1}{{M_1}^*}$$\n",
+        "\n",
+        "Mach number after nomrmal shock $M_2$\n",
+        "\n",
+        "$$ {{M_2}^2} = \\frac{1 + ( \\frac{γ - 1}{2} ) * {{M_1}^2}} { γ {{M_1}^2} - \\frac{γ -1}{2} }$$\n",
+        "\n",
+        "if $ M_1 ⟶ ∞$\n",
+        "\n",
+        "$$ M_2 = \\sqrt{\\frac{γ-1}{2γ}} $$\n",
+        "\n",
+        "for air $ M_1 ⟶ ∞$ then\n",
+        "\n",
+        "$ M_2 = 0.378$\n",
+        "\n",
+        "\n",
+        "\\\\\n",
+        "\n",
+        "if $M_1 < ∞ $,   then   $M_2 > 0.378$\n",
+        "\n",
+        "\n",
+        "\\\\\n",
+        "\n",
+        "### Pressure ratio $(\\frac{P_2}{P_1})$\n",
+        "\n",
+        "$$ \\frac{P_2}{P_1} = 1 + \\frac{2γ}{γ+1}({M_1}^2 -1) $$\n",
+        "\n",
+        "### Density ratio $(\\frac{\\rho_2}{\\rho_1})$\n",
+        "\n",
+        "$$ \\frac{\\rho_2}{\\rho_1} = \\frac{V_1}{V_2} = {{M_1}^*}^2 = \\frac{(γ +1){M_1}^2}{ 2 + (γ - 1){M_1}^2 } $$\n",
+        "\n",
+        "### Temperature ratio $(\\frac{T_2}{T_1})$\n",
+        "\n",
+        "$$ \\frac{T_2}{T_1} = \\frac{P_2}{P_1} * \\frac{\\rho_1}{\\rho_2} $$  \n",
+        "\n",
+        "\n",
+        "### Entropy change $(ΔS)$\n",
+        "\n",
+        "$$ ΔS = -R \\ln {\\frac{P_{02}}{P_{01}}} $$"
+      ],
+      "metadata": {
+        "id": "xpaqzDzJZyBc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Max Velocity of flow from reservoir\n",
+        "\n",
+        "$$ V_{Max} = \\sqrt{2.C_p.T_o} $$"
+      ],
+      "metadata": {
+        "id": "GR12ncfaf1Eg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Working of convergent nozzle\n",
+        "\n",
+        "if $\\frac{P_o}{P_b} \\ge 1.89$ then the nozzle is chocked\n",
+        "\n",
+        "then $P_{exit} = P^*$\n",
+        "\n",
+        "\\\\\n",
+        "\n",
+        "for unchocked nozzle  $ {P_{exit}} = P_{b} $\n",
+        "\n",
+        "$P_b$ = Back Pressure"
+      ],
+      "metadata": {
+        "id": "exPVNmxegP93"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mass flow rate through chocked nozzle\n",
+        "\n",
+        "$$ \\dot{m} = {\\sqrt{γ}} \\left (\\frac{2}{γ+1} \\right)^{\\frac{γ+1}{2(γ-1)}} \\frac{P_o.A^*}{\\sqrt{R.T_o}}  $$"
+      ],
+      "metadata": {
+        "id": "1Jn6AuI0hpHP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Area Mach relation between C-D nozzle\n",
+        "\n",
+        "$$ \\frac{A}{A^*} = \\frac{1}{M} \\left( \\left( \\frac{2}{γ+1} \\right) \\left(\n",
+        "  1 + (\\frac{γ-1}{2}){M^2} \\right)\\right)^{\\frac{γ + 1}{2(γ-1)}} $$\n",
+        "\n",
+        "  for air\n",
+        "\n",
+        "  $$ \\frac{A}{A^*} = \\frac{1}{M} \\left( \\frac{5 + M^2}{6} \\right)^3 $$\n",
+        "\n",
+        "  ** This equation has two solutions for \"$M$\" subsonic and supersonic"
+      ],
+      "metadata": {
+        "id": "3ZnANil5ifp6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Moving Normal Shock\n",
+        "\n",
+        "> Earth attached cordinate system\n",
+        "  - Speed of air before shock - $U_1$\n",
+        "  - Speed of air after shock - $U_2$\n",
+        "  - Speed of shock - $C_s$\n",
+        "\n",
+        "> Shock attached cordinatee system\n",
+        "  - Speed of air before shock - $V_1 = C_s - U_1$\n",
+        "  - Speed of air after shock - $V_2 = C_s = U_2\n",
+        "\n",
+        "\n",
+        "> Steps to find\n",
+        "  - Find $M_1$ $$ M_1 = \\frac{V_1}{a_1} $$\n",
+        "  - by using denisty ratio, find $V_2$ $$ \\frac{\\rho_2}{\\rho_1} = \\frac{V_1}{V_2} = {{M_1}^*}^2 = \\frac{(γ +1){M_1}^2}{ 2 + (γ - 1){M_1}^2 } $$\n",
+        "  - caluculate $U_2$\n",
+        "  - Find Pressure ratio $$ \\frac{P_2}{P_1} = 1 + \\frac{2γ}{γ+1}({M_1}^2 -1) $$\n",
+        "  - find Temperature ratio and get $T_2$ $$\\frac{T_{2}}{T_{1}} = \\frac{P_{2}}{P_{1}} * \\frac{ρ_{1}}{\\rho _{2}} $$\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xSWB0PPD6Wr_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Speed Measurement\n",
+        "Devices for Speed Measurement\n",
+        "  - Pitot Tube\n",
+        "  - Pitot static tube\n",
+        "  - Static tube  \n",
+        "\n",
+        "\n",
+        "> For $M < 0.3$\n",
+        "  $$ V = \\sqrt{\\frac{2(P_o - P)}{ρ}} $$\n",
+        "\n",
+        "> if $0.3 < M < 1$\n",
+        "  - get $M$ out for this\n",
+        "  $$ \\frac{P_o}{P} = \\left (1 + (\\frac{γ-1}{2})M^2 \\right)^{{\\frac{γ}{γ-1}}}$$\n",
+        "  - Velocity V $$ V = M ̇* \\sqrt{γRT} = M * \\sqrt{\\frac{γP}{ρ}} $$\n",
+        "\n",
+        ">  if $ M>1$\n",
+        "  -  Normal Shock is formed in front of pitot tube\n",
+        "  $$ \\frac{P_{o2}}{P_1} = \\frac{ {\\left[  \\left( \\frac{γ+1}{2} \\right) {M_1}^2  \\right]}^{\\frac{γ}{γ-1}}}{ {\\left[ \\left(\\frac{2γ}{γ+1}\\right) {M_1}^2 - \\left (\\frac{γ-1}{γ+1}\\right) \\right]}^{\\frac{1}{γ-1}}}  $$ \\\n",
+        "  $$ Rayleigh \\ Supersonic \\ Pitot \\ Formula $$"
+      ],
+      "metadata": {
+        "id": "L4r28zecQ9No"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Oblique Shock Wave\n",
+        "If flow turns toward itself then oblique shock is formed\n",
+        "\n",
+        "> Nomencalature\n",
+        "  - Deflection angle - $θ$\n",
+        "  - Shock angle - $β$\n",
+        "\n",
+        "> Approch to solution\n",
+        "  -  you have $M_1$  find $M_{n1}$   $$ M_{n1} = M_1 . sin{(β)} $$\n",
+        "    * Note to form shock wave $M_{n1} > 1$\n",
+        "      $$ β > {sin}^{-1}(\\frac{1}{M_1}) $$\n",
+        "    * $β>μ$ , where $ μ$ is Mach angle\n",
+        "  - Now can use Normal shock formulas for Normal Mach numbers\n",
+        "    * to find $M_{n2}$\n",
+        "      $$ {M_{n2}}^2 = \\frac{ 1 + \\left( \\frac{γ-1}{2} \\right) {M_{n1}}^2 }{γ.{M_{n1}}^2 - \\left (\\frac{γ-1}{2}\\right)} $$\n",
+        "    * but you need $M_2$\n",
+        "      $$ M_2 = \\frac{M_{n2}}{Sin(β-θ)} $$\n",
+        "    * Pressure ratio\n",
+        "      $$ \\frac{P_2}{P_1} = 1 + \\frac{2γ}{γ+1}({M_{n1}}^2 -1) $$\n",
+        "    * Density ratio\n",
+        "      $$ \\frac{\\rho_2}{\\rho_1} = \\frac{V_{n1}}{V_{n2}} = {{M_{n1}}^*}^2 = \\frac{(γ +1){M_{n1}}^2}{ 2 + (γ - 1){M_{n1}}^2 } $$\n",
+        "\n",
+        "\n",
+        "> $θ - β - M $ Relation\n",
+        "  $$ tan(θ) = \\frac{2Cot(β) \\left( {M_1}^2.Sin^2(β) - 1 \\right)}{ {M_1}^2 \\left( γ.Cos(2β) \\right) + 2} $$\n",
+        "  Discussion on the relation\n",
+        "  1. if $θ = θ_{Max}$ \\\n",
+        "    There is no solution for straight oblique shock, The shock detaches and forms Bow shock\n",
+        "  2. if Mach $(⇑)$ then $θ_{Max} (⇑)$\n",
+        "  3. if $θ < θ_{Max}$\\\n",
+        "    you get 2 solutions\n",
+        "    * Weak solution\n",
+        "    * Strong solution\n",
+        "  4. if $θ = 0$\n",
+        "    * $β = \\frac{π}{2}$ Normal shock\n",
+        "    * $β = μ$ for No shock formation\n",
+        "  5. for $θ - β - M $ relation\n",
+        "    * if $ θ $ = Constant\n",
+        "      - For Weak solution\n",
+        "        * if M (⇑) then β (⇓)\n",
+        "        * if M (⇓) then β (⇑)\n",
+        "      - For Strong solution\n",
+        "        * if M (⇑) then β (⇑)\n",
+        "        * if M (⇓) then β (⇓)\n",
+        "    * if $M$ = Constant\n",
+        "      - For weak solution\n",
+        "        * if θ (⇑) then β (⇑)\n",
+        "        * if θ (⇓) then β (⇓)\n",
+        "      - For strong solution\n",
+        "        * if θ (⇑) then β (⇓)\n",
+        "        * if θ (⇓) then β (⇑)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qrHFLL28Wyyz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Expansion wave\n",
+        "\n",
+        "This Flow is isentropic and formed when flow turns away from itself\n",
+        "\n",
+        "> **Prandtl - Meyer Function** ( $\\bf ν$ )\n",
+        "$$ \\bf{ν}  = \\left(\\sqrt{\\frac{γ+1}{γ-1}} \\right) tan^{-1}{\\left( \\sqrt{\\frac{γ-1}{γ+1} (M^2 -1)} \\right)} - tan^{-1}(\\sqrt{M^2 -1}) $$\n",
+        " - for Air\n",
+        "  $$ \\bf ν  = \\sqrt{6} tan^{-1}{\\left(  \\sqrt{\\frac{(M^2 -1)}{6}} \\right)} - tan^{-1}(\\sqrt{M^2 -1}) $$\n",
+        "\n",
+        "> Solution approch\n",
+        "  1. for given $M_1$ caluculate $\\bf ν_1$\n",
+        "  2. find $\\bf ν_2$ $$ \\bf ν_2 = ν_1 + θ $$\n",
+        "  3. find $M_2$ using $\\bf ν_2$\n",
+        "  4. Apply Isentropic relations\n",
+        "\n",
+        "> if $M_1$ = 1 and $M_2$ = ∞\n",
+        "  - if $M_1 = 1$\n",
+        "    - $\\bf ν_1 = 0$\n",
+        "  - if $ M_2 = ∞$\n",
+        "    - $ \\bf ν_2 = \\left [ \\sqrt{\\frac{γ+1}{γ-1}} -1 \\right]\\frac{π}{2}$\n",
+        "    - then $ θ =  θ_{Max} = \\bf ν_2 $\\\n",
+        "  $$ θ_{Max} =  \\left [ \\sqrt{\\frac{γ+1}{γ-1}} -1 \\right]\\frac{π}{2}  $$\n",
+        "\n",
+        "> Fan angle\n",
+        "  $$ fan \\ angle = μ_1 - μ_2 + θ $$"
+      ],
+      "metadata": {
+        "id": "S0plw35ukRS3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4gmz88Hg4ADK"
+        "id": "NxAOBwFBk8q0"
       },
       "execution_count": null,
       "outputs": []
